# ChangeLog for dev-util/metro
# Copyright 2008-2009 Funtoo Technologies, LLC; Distributed under the GPL v2

*metro-1.2.1 (16 Dec 2008)

  16 Dec 2008; Daniel Robbins <drobbins@funtoo.org> +metro-1.2.1.ebuild:
  maintenance release.

*metro-1.2 (15 Dec 2008)

  15 Dec 2008; Daniel Robbins <drobbins@funtoo.org> +metro-1.2.ebuild: new
  release.

*metro-1.1-r1 (11 Nov 2008)

  11 Nov 2008; Daniel Robbins <drobbins@funtoo.org> +metro-1.1-r1.ebuild:
  new snapshot with a few bug fixes.

  07 Nov 2008; Daniel Robbins <drobbins@funtoo.org> metro-1.1.ebuild: added
  missing dev-util/git runtime dep. D'oh!

*metro-1.1 (05 Nov 2008)

  05 Nov 2008; Daniel Robbins <drobbins@funtoo.org> +metro-1.1.ebuild: initial
  Portage-based release.
