@@ -1,10 +1,4 @@
-DIST metro-1.1-r1.tar.bz2 42821 RMD160 b6ba10cfdfa8b34997722d9565d2c4ccd482f725 SHA1 23555c9fbad662345af2360dacf253b26fbb30e1 SHA256 fbdef596fbbb17157c39f5afb5f9dabca3ee4232ccd9f3450ad6ea8233404f18
-DIST metro-1.1.tar.bz2 23834 RMD160 946be9061c5d2dc85af08d40bd6e55bc734abc0c SHA1 385d4cf51fae3b1cc0f9775cb41b02d0494185bc SHA256 9599cc0ffa4a32f7a423bde9ebf3e0b1cc356a918c4d88d7ae6deb4f86f1a6a5
-DIST metro-1.2.1.tar.bz2 57490 RMD160 eb526bc58a950db288bdcfabfcaefd20d8f31652 SHA1 8896985fe411bb44b4cdf0cdf46c21c17fa259b8 SHA256 dbaab4a115ad7f4044b9aa5dacf2c58c01d8e072fa5f0b65adda175ec7b28494
-DIST metro-1.2.tar.bz2 57481 RMD160 2b6f0506c2455e085b1508dcc3d805361cc378d8 SHA1 f42e6486161a9a9828b32b739fb73ef31a0196d3 SHA256 118acb39859e22c9dd4c2ebbc5b6ccf3b9728546859dcc529fce485c7db848e4
-EBUILD metro-1.1-r1.ebuild 865 RMD160 21d6983069c493d3941b96ea68f2d4caf19ad919 SHA1 a80695864c6bbc40de0816924815871dcc8060ed SHA256 a5a8a776181ec12d31e8fb394d079d176fa9d1b50898fcbf92c0ec062750909f
-EBUILD metro-1.1.ebuild 862 RMD160 21f322233c5e47328bdd093d39eaa467a64654f1 SHA1 9ef680d66af4d2af75101dda88b33dab1c078fc6 SHA256 f92c0e18b8b4fde19423dedd877a2ccbe27ab129bc44331d70fafe6a7b43b52f
-EBUILD metro-1.2.1.ebuild 862 RMD160 21f322233c5e47328bdd093d39eaa467a64654f1 SHA1 9ef680d66af4d2af75101dda88b33dab1c078fc6 SHA256 f92c0e18b8b4fde19423dedd877a2ccbe27ab129bc44331d70fafe6a7b43b52f
-EBUILD metro-1.2.ebuild 862 RMD160 21f322233c5e47328bdd093d39eaa467a64654f1 SHA1 9ef680d66af4d2af75101dda88b33dab1c078fc6 SHA256 f92c0e18b8b4fde19423dedd877a2ccbe27ab129bc44331d70fafe6a7b43b52f
-MISC ChangeLog 738 RMD160 06ee8e472615eb6488216c82d966ae68a7593a73 SHA1 f143b14361146701d076a19c53c7fee64ad1a625 SHA256 0c55b30278730492a8f00f242e07053b16bec4d69893be31f430c28fe264c70c
+DIST metro-1.2.2.tar.bz2 57606 RMD160 cb957d648bff9f0ad61b375e9b6acecbfef240ab SHA1 e10db00a82fa183295ed60efa9f01f2a6a010cab SHA256 098ec2644742ae02eeb846935aafb5ff50d0b24c37e27a570737eec7fca9ef02
+EBUILD metro-1.2.2.ebuild 862 RMD160 21f322233c5e47328bdd093d39eaa467a64654f1 SHA1 9ef680d66af4d2af75101dda88b33dab1c078fc6 SHA256 f92c0e18b8b4fde19423dedd877a2ccbe27ab129bc44331d70fafe6a7b43b52f
+MISC ChangeLog 855 RMD160 729b00b5779726d4a10c1cad85f049e39f157f33 SHA1 e66814376e6ce0c70847b05827c2cb47302c7ced SHA256 866f20902cfea9fc971ac169e00bd65b017df80b7e7b8c74bf6141b490877c0b
 MISC metadata.xml 209 RMD160 b87f81da5acd2500b8824e893f293d34a23a0e42 SHA1 a551fad5c035aa91da223feb05b5fb60acbaa067 SHA256 aaa9c10ffa167f1cc431b0a7375249f67f7fcc6d1493b49027942801175db6e9
