@@ -1,6 +1,11 @@
 # ChangeLog for dev-util/metro
 # Copyright 2008-2009 Funtoo Technologies, LLC; Distributed under the GPL v2
 
+*metro-1.2.2 (19 Dec 2008)
+
+19 Dec 2008; Daniel Robbins <drobbins@funtoo.org> :metro-1.2.2.ebuild:
+Bug fix release.
+
 *metro-1.2.1 (16 Dec 2008)
 
   16 Dec 2008; Daniel Robbins <drobbins@funtoo.org> +metro-1.2.1.ebuild:
